[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://MainUITheme.tres" type="Theme" id=2]
[ext_resource path="res://Time Won.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 44
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.717647, 0.0666667, 0.0666667, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -218.5
margin_top = 82.0
margin_right = 218.5
margin_bottom = 182.0
rect_pivot_offset = Vector2( 218, 50 )
theme = ExtResource( 2 )
text = "Time Attack"
align = 1
valign = 1

[node name="PlayerSelection" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -21.0
margin_bottom = 99.0
grow_horizontal = 2
custom_constants/separation = 50
alignment = 1

[node name="Singleplayer" type="Button" parent="PlayerSelection"]
margin_left = 453.0
margin_right = 620.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 100, 50 )
focus_mode = 0
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "SinglePlayer"
icon_align = 1

[node name="Sliptscreen" type="Button" parent="PlayerSelection"]
margin_left = 670.0
margin_right = 827.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 100, 50 )
focus_mode = 0
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Sliptscreen"
icon_align = 1

[node name="Control" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 120.0
grow_horizontal = 2
mouse_filter = 2

[node name="SingleplayerOptions" type="HBoxContainer" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
alignment = 1

[node name="Singleplayer Level 1" type="Button" parent="Control/SingleplayerOptions"]
margin_left = 343.0
margin_right = 501.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 100, 50 )
focus_mode = 0
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Play Level 1"
icon_align = 1

[node name="Singleplayer Level 2" type="Button" parent="Control/SingleplayerOptions"]
margin_left = 551.0
margin_right = 719.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 100, 50 )
focus_mode = 0
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Play Level 2"
icon_align = 1

[node name="Singleplayer Level 3" type="Button" parent="Control/SingleplayerOptions"]
margin_left = 769.0
margin_right = 936.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 100, 50 )
focus_mode = 0
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Play Level 3"
icon_align = 1

[node name="MultiplayerOptions" type="HBoxContainer" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
alignment = 1

[node name="Multiplayer Level 1" type="Button" parent="Control/MultiplayerOptions"]
margin_left = 343.0
margin_right = 501.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 100, 50 )
focus_mode = 0
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Play Level 1"
icon_align = 1

[node name="Multiplayer Level 2" type="Button" parent="Control/MultiplayerOptions"]
margin_left = 551.0
margin_right = 719.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 100, 50 )
focus_mode = 0
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Play Level 2"
icon_align = 1

[node name="Back" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_bottom = 60.0
text = "Back"

[node name="LoadingPanel" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.717647, 0.0666667, 0.0666667, 1 )

[node name="Tutorial" type="Label" parent="LoadingPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -228.0
margin_top = 133.0
margin_right = 228.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 1 )
text = "W - Acelerar
S - Frear
A e D - Virar
Space - Freio de mao
Q e E - Marchas"
align = 1
valign = 2

[node name="ProgressBar" type="ProgressBar" parent="LoadingPanel"]
anchor_left = 0.167
anchor_top = 0.5
anchor_right = 0.167
anchor_bottom = 0.5
margin_left = -2.0
margin_top = 90.0
margin_right = 850.0
margin_bottom = 190.0
theme = ExtResource( 2 )
max_value = 1.0

[node name="Timer" type="Timer" parent="LoadingPanel"]
one_shot = true

[node name="Continue" type="Label" parent="LoadingPanel"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -774.0
margin_top = -100.0
margin_right = -15.0
custom_fonts/font = SubResource( 1 )
text = "Aperte \"Espaco\" para continuar"
align = 1
valign = 2

[connection signal="pressed" from="PlayerSelection/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="PlayerSelection/Sliptscreen" to="." method="_on_Sliptscreen_pressed"]
[connection signal="pressed" from="Control/SingleplayerOptions/Singleplayer Level 1" to="." method="_on_Singleplayer_Level_1_pressed"]
[connection signal="pressed" from="Control/SingleplayerOptions/Singleplayer Level 2" to="." method="_on_Singleplayer_Level_2_pressed"]
[connection signal="pressed" from="Control/SingleplayerOptions/Singleplayer Level 3" to="." method="_on_Singleplayer_Level_3_pressed"]
[connection signal="pressed" from="Control/MultiplayerOptions/Multiplayer Level 1" to="." method="_on_Multiplayer_Level_1_pressed"]
[connection signal="pressed" from="Control/MultiplayerOptions/Multiplayer Level 2" to="." method="_on_Multiplayer_Level_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="LoadingPanel/Timer" to="." method="_on_Timer_timeout"]
